Contact us code  added

--- a/NancyWebsite/Views/Home/Index.cshtml
+++ b/NancyWebsite/Views/Home/Index.cshtml
@@ -148,13 +148,14 @@
 
                 <div class="col-lg-6 col-md-12 mt-12 mt-md-0">
                     <div class="box featured" data-aos="fade-up" data-aos-delay="200">
-                        <form action="forms" method="post" role="form" class="php-email-form">
+                        <form action="@Url.Action("Index", "Home")" method="post" role="form" class="php-email-form">
                             <div class="row">
+                                <input type="hidden" id="IsEnquiry" name="IsEnquiry" value="False" />
                                 <div class="col form-group">
-                                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                                    <input type="text" name="Name" class="form-control" id="Name" placeholder="Your Name" required>
                                 </div>
                                 <div class="col form-group">
-                                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                                    <input type="email" class="form-control" name="Email" id="Email" placeholder="Your Email" required>
                                 </div>
                             </div>
 
@@ -207,20 +208,21 @@
                 </div>
 
                 <div class="col-lg-6">
-                    <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                    <form action="@Url.Action("Index", "Home")" method="post" role="form" class="php-email-form">
                         <div class="row">
+                            <input type="hidden" id="IsEnquiry" name="IsEnquiry" value="True" />
                             <div class="col form-group">
-                                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                                <input type="text" name="Name" class="form-control" id="Name" placeholder="Your Name" required>
                             </div>
                             <div class="col form-group">
-                                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                                <input type="email" class="form-control" name="Email" id="Email" placeholder="Your Email" required>
                             </div>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                            <input type="text" class="form-control" name="Subject" id="Subject" placeholder="Subject" required>
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                            <textarea class="form-control" name="Message" rows="5" placeholder="Message" required></textarea>
                         </div>
                         <div class="my-3">
                             <div class="loading">Loading</div>
